results/experiments/1_10/1426/2026-04-29_05-24-36/verification/batfish/candidate_1_vs_candidate_2_reachability.txt
--- Analyzing results/experiments/2026-04-29_05-20-44/1426/2026-04-29_05-24-36/verification/candidates: candidate_1 vs candidate_2 ---

[DIFFERENCE DETECTED]
Counter-example Packet (Packet P): start=frankfurt [10.0.0.59->10.0.0.44 ICMP (type=8, code=0)]

Trace in Candidate 1 (Permitted):
[((ORIGINATED(default), NO_ROUTE(Discarded)))]

Trace in Candidate 2 (Denied/Different):
[((ORIGINATED(default), FORWARDED(Forwarded out interface: FastEthernet3/0, Routes: [connected (Network: 10.0.0.44/31, Next Hop: interface FastEthernet3/0)]), TRANSMITTED(FastEthernet3/0)), (RECEIVED(FastEthernet1/0), ACCEPTED(FastEthernet1/0)))]
